clarifying the 255 to 220 step

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <h4>Methodology </h4>
     For the analysis, I looked at the top 50 meetup groups in Austin and eliminated the ones without speaker events. These all had greater than 1500 members. I also omitted women-specific events which I will explain later. Amazingly, this still left me with 44 groups. I sorted the meetup group list by number of members and picked every third group as a sample. Then, I pulled the events for that group, returning 255 events. <br><br>
 
-    I manually went through and notated whether or not these events were speaker events, and tallied the male, female, and non-binary speakers for each. I based this on triangulating with names, pronouns, and lots and lots of googling. I realize there are ways to automate this, but I wanted to have the highest quality vetted data to put out there. 
+    I manually went through and notated whether or not these events were speaker events (which shrunk the list to 220), and tallied the male, female, and non-binary speakers for each. I based this on triangulating with names, pronouns, and lots and lots of googling. I realize there are ways to automate this, but I wanted to have the highest quality vetted data to put out there. 
     <br>
     <h4>Findings</h4>
     The results were somewhat indicative of a more diverse meetup speaker culture in Austin than in DC, but still showed a disappointing disparity. Only eleven women spoke at single-speaker events in Austin. Out of 74.
@@ -71,7 +71,7 @@
     <iframe width="100%" height="500px" src="./iframes/meetupMultiSmall.html" frameborder="0"></iframe>
     </div>
 
-    <p class="content">Of the 255 speaking slots, only 14.5% were women. As Kate explains, "This lack of representation can have far-reaching effects. Marginalized groups miss out on opportunities to be presented as leaders or experts in their fields. They are less likely to feel welcome to such groups, missing out on valuable learning and networking opportunities. The result can be a feedback loop that works against diversity in the field."
+    <p class="content">Of the 220 speaking slots, only 16.3% were women. As Kate explains, "This lack of representation can have far-reaching effects. Marginalized groups miss out on opportunities to be presented as leaders or experts in their fields. They are less likely to feel welcome to such groups, missing out on valuable learning and networking opportunities. The result can be a feedback loop that works against diversity in the field."
     <br><br>
 
     These graphs do not include the data for non-binary people because they did not speak at any of the 114 events. But they are also a part of this community and deserve to be heard.
