--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <p class="content">Of the 220 speaking slots, only 16.3% were women. As Kate explains, "This lack of representation can have far-reaching effects. Marginalized groups miss out on opportunities to be presented as leaders or experts in their fields. They are less likely to feel welcome to such groups, missing out on valuable learning and networking opportunities. The result can be a feedback loop that works against diversity in the field."
     <br><br>
 
-    These graphs do not include the data for non-binary people because they did not speak at any of the 114 events. But they are also a part of this community and deserve to be heard.
+    These graphs do not include the data for non-binary people because they did not speak at any of these events. But they are also a part of this community and deserve to be heard.
     <br><br>
 
     <h4>Takeaways</h4>
